# FaceRecognition

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/opencv/include/opencv2/core/cuda/: color.hpp  reduce.hpp  transform.hpp  type_traits.hpp  vec_distance.hpp
app/opencv/include/opencv2/core/cuda/detail/: color_detail.hpp  reduce.hpp  reduce_key_val.hpp  transform_detail.hpp  type_traits_detail.hpp  vec_distance_detail.hpp
app/opencv/include/opencv2/flann/: hdf5.h
app/src/androidTest/java/com/blueberry/facerec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: face_detect.cpp  face_detect.h  lang.h  log.h
app/src/main/java/com/blueberry/facerec/: Face.java  FaceDetector.java  FileUtil.java  MainActivity.java  MediaStoreUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/blueberry/facerec/: ExampleUnitTest.java
